--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,25 +1,29 @@
 [versions]
-agp = "8.8.0"
-hiltAndroid = "2.56.1"
-hiltAndroidCompiler = "2.51.1"
+agp = "8.8.2"
+hiltAndroid = "2.56.2"
+hiltAndroidCompiler = "2.56.2"
+hiltNavigationFragment = "1.2.0"
 supabase = "3.1.4"
-kotlin = "2.0.0"
-coreKtx = "1.15.0"
+kotlin = "2.1.20"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 ktorClientAndroid = "3.1.2"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
-composeBom = "2024.04.01"
-material3 = "1.0.1"
+composeBom = "2025.04.00"
+material3 = "1.3.2"
 materialIconsExtended = "1.7.8"
-media3Exoplayer = "1.6.0"
-media3CommonKtx = "1.6.0"
-navigationCompose = "2.6.0"
+media3Exoplayer = "1.6.1"
+media3CommonKtx = "1.6.1"
+navigationCompose = "2.8.9"
+runtimeLivedata = "1.7.8"
+coreKtxVersion = "1.16.0"
 
 [libraries]
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+#androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationFragment" }
+androidx-hilt-navigation-fragment = { module = "androidx.hilt:hilt-navigation-fragment", version.ref = "hiltNavigationFragment" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
@@ -43,6 +47,8 @@ androidx-media3-common-ktx = { group = "androidx.media3", name = "media3-common-
 ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktorClientAndroid" }
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 supabase-postgrest-kt = { module = "io.github.jan-tennert.supabase:postgrest-kt", version.ref = "supabase" }
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
+core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtxVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
